manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neath-tan7026-thanak-blogg-https-ingress
  namespace: neath-tan7026-thanak-blogg
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - neath-tan7026-thanak-blogg.assessify.org
      secretName: neath-tan7026-thanak-blogg-secret-tls
  rules:
    - host: neath-tan7026-thanak-blogg.assessify.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: neath-tan7026-thanak-blogg-service
                port:
                  number: 8336
